[package]
name = "dterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1.37", features = [] }
log = "0.4.19"
log4rs = "1"
colored = "1.7.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.0", features = [] }
